deploy/kubernetes/apps/halort-design-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: halort-design-system
  labels:
    app: halort-design-system
spec:
  type: ClusterIP
  selector:
    app: halort-design-system
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
