deploy/kubernetes/apps/halort-design-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: halort-design-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - design.halort.com
      secretName: halort-design-system-tls
  rules:
    - host: design.halort.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: halort-design-system
                port:
                  number: 80
